vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__signal_assignment_external_name.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "stmt_to_test_text(\"<< signal dut.foo : boolean  >> <= bar(1,2);\")"
---
SimpleWaveformAssignment
  NameTarget
    Name
      ExternalSignalName
        LtLt
        Keyword(Signal)
        RelativePathname
          PartialPathname
            PathnameElement
              Identifier 'dut'
            Dot
            PathnameElement
              Identifier 'foo'
        Colon
        SubtypeIndication
          Name
            NameDesignatorPrefix
              Identifier 'boolean'
        GtGt
  LTE
  WaveformElements
    WaveformElement
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'bar'
          ParenthesizedName
            LeftPar
            AssociationList
              AssociationElement
                ActualPart
                  ActualPartExpression
                    LiteralExpression
                      AbstractLiteral '1'
              Comma
              AssociationElement
                ActualPart
                  ActualPartExpression
                    LiteralExpression
                      AbstractLiteral '2'
            RightPar
  SemiColon
