vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__simple_assert.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "to_test_text(Parser::assert_statement, \"assert false;\")"
---
AssertionStatement
  Assertion
    Keyword(Assert)
    NameExpression
      Name
        Identifier 'false'
  SemiColon
