vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__simple_if_statement.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "to_test_text(Parser::if_statement,\n\"\\\nif cond = true then\n   foo(1,2);\n   x := 1;\nend if;\")"
---
IfStatement
  IfStatementPreamble
    Keyword(If)
    BinaryExpression
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'cond'
      EQ
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'true'
    Keyword(Then)
  SequenceOfStatements
    ProcedureCallStatement
      Name
        NameDesignatorPrefix
          Identifier 'foo'
        ParenthesizedName
          LeftPar
          AssociationList
            AssociationElement
              ActualPart
                ActualPartExpression
                  LiteralExpression
                    AbstractLiteral '1'
            Comma
            AssociationElement
              ActualPart
                ActualPartExpression
                  LiteralExpression
                    AbstractLiteral '2'
          RightPar
      SemiColon
    SimpleVariableAssignment
      NameTarget
        Name
          NameDesignatorPrefix
            Identifier 'x'
      ColonEq
      LiteralExpression
        AbstractLiteral '1'
      SemiColon
  IfStatementEpilogue
    Keyword(End)
    Keyword(If)
    SemiColon
