vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__simple_signal_assignment.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "stmt_to_test_text(\"foo(0) <= bar(1,2) after 2 ns;\")"
---
SimpleWaveformAssignment
  NameTarget
    Name
      NameDesignatorPrefix
        Identifier 'foo'
      ParenthesizedName
        LeftPar
        AssociationList
          AssociationElement
            ActualPart
              ActualPartExpression
                LiteralExpression
                  AbstractLiteral '0'
        RightPar
  LTE
  WaveformElements
    WaveformElement
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'bar'
          ParenthesizedName
            LeftPar
            AssociationList
              AssociationElement
                ActualPart
                  ActualPartExpression
                    LiteralExpression
                      AbstractLiteral '1'
              Comma
              AssociationElement
                ActualPart
                  ActualPartExpression
                    LiteralExpression
                      AbstractLiteral '2'
            RightPar
      AfterClause
        Keyword(After)
        PhysicalLiteralExpression
          PhysicalLiteral
            AbstractLiteral '2'
            Name
              NameDesignatorPrefix
                Identifier 'ns'
  SemiColon
