vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__simple_signal_assignment_delay_mechanism.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "to_test_text(Parser::sequential_statement, \"foo(0) <= transport bar(1,2);\")"
---
SimpleWaveformAssignment
  NameTarget
    Name
      Identifier 'foo'
      ParenthesizedName
        LeftPar
        AssociationList
          AssociationElement
            ActualPart
              ActualPartExpression
                LiteralExpression
                  AbstractLiteral '0'
        RightPar
  LTE
  TransportDelayMechanism
    Keyword(Transport)
  WaveformElements
    WaveformElement
      NameExpression
        Name
          Identifier 'bar'
          ParenthesizedName
            LeftPar
            AssociationList
              AssociationElement
                ActualPart
                  ActualPartExpression
                    LiteralExpression
                      AbstractLiteral '1'
              Comma
              AssociationElement
                ActualPart
                  ActualPartExpression
                    LiteralExpression
                      AbstractLiteral '2'
            RightPar
  SemiColon
