vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__simple_wait_statement_with_label.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "to_test_text(Parser::wait_statement, \"foo: wait;\")"
---
WaitStatement
  StmtLabel
    Identifier 'foo'
    Colon
  Keyword(Wait)
  SemiColon
