vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__variable_assignment_external_name.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "stmt_to_test_text(\"<< variable dut.foo : boolean >> := bar(1,2);\")"
---
SimpleVariableAssignment
  NameTarget
    Name
      ExternalVariableName
        LtLt
        Keyword(Variable)
        RelativePathname
          PartialPathname
            PathnameElement
              Identifier 'dut'
            Dot
            PathnameElement
              Identifier 'foo'
        Colon
        SubtypeIndication
          Name
            NameDesignatorPrefix
              Identifier 'boolean'
        GtGt
  ColonEq
  NameExpression
    Name
      NameDesignatorPrefix
        Identifier 'bar'
      ParenthesizedName
        LeftPar
        AssociationList
          AssociationElement
            ActualPart
              ActualPartExpression
                LiteralExpression
                  AbstractLiteral '1'
          Comma
          AssociationElement
            ActualPart
              ActualPartExpression
                LiteralExpression
                  AbstractLiteral '2'
        RightPar
  SemiColon
